@@ -1,16 +1,12 @@
-{ pkgs, lib, config, ... }:
+{ pkgs, lib, ... }:
 # not copied ;)
 {
   programs.yazi = {
     package = pkgs.yazi;
-    # enableZshIntegration = true; # adds function "ya"
+    enableZshIntegration = true; # adds function "yy"
     settings = import ./settings.nix {
       inherit pkgs lib;
     };
     keymap = import ./keymap.nix { inherit pkgs; };
-  };
-  # for some reason enableZshIntegation stopped working
-  programs.zsh.shellAliases = lib.mkIf config.programs.zsh.enable {
-    ya = "${lib.getExe pkgs.yazi}";
   };
 }
